final changes commited